--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>Rekweb Pertemuan 3</title>
+	<link rel="stylesheet" type="text/css" href="">>
 </head>
 <body>
  <h1>Hello</h1>
+ <p>Paragraf 1</p>>
+ <script type="text/javascript" src="script.js"></script>>
 </body>
 </html>>
