--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="">>
 </head>
 <body>
- <h1>Hello</h1>
+ <h2>Hello</h1>
  <p>Paragraf 1</p>>
+ <p>Paragraf 2</p>>
  <script type="text/javascript" src="script.js"></script>>
 </body>
 </html>>
